Update backend and frontend: Add profile management, password reset features, and fix security configurations